--- a/index.css
+++ b/index.css
@@ -17,19 +17,38 @@ body{
     height: 100vh;
     display: grid;
     place-items: center center;
+    overflow-x: hidden;
 }
 .container{
     margin-top: 3rem;
     display: grid;
     height: fit-content;
     width: 60vw;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(1, 1fr);
     border-collapse: separate;
     border-radius: 5px;
-    overflow: hidden;
+    margin-bottom: 2.5rem;
+}
+
+@media (min-width: 1080px){
+    .container {
+        margin-top: 3rem;
+        display: grid;
+        height: fit-content;
+        width: 60vw;
+        grid-template-columns: repeat(3, 1fr);
+        border-radius: 5px;
+        overflow: hidden;
+        }
+        .card {
+            padding: 20% 15%;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
 }
 .card{
-    padding: 3rem;
+    padding: 20% 15%;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -51,7 +70,7 @@ body{
 .card>p{
     font-family: 'Lexend Deca', sans-serif;
     color: var(--para_font);
-    font-size: 0.8rem;
+    font-size: clamp(0.4rem,0.8rem,1.2rem);
     line-height: 1.4rem;
 }
 
@@ -72,19 +91,19 @@ button{
 }
 #card-1>button:hover{
     color: white;
-    background: var(--orange);
+    background: transparent;
 }
 #card-2>button{
     color: var(--dark_cyan);
 }
 #card-2>button:hover{
     color: white;
-    background: var(--dark_cyan);
+        background: transparent;
 }
 #card-3>button{
     color: var(--very_dark_cyan);
 }
 #card-3>button:hover {
     color: white;
-    background: var(--very_dark_cyan);
+        background: transparent;
 }
